--- a/FMI_Parking_System/frontend/map/zones - Copy.html
+++ b/FMI_Parking_System/frontend/map/zones - Copy.html
@@ -2,189 +2,309 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/zones - Copy.css">
-    <script defer src="javascript/load_map.js"></script>
-    <script defer src="javascript/send_form_search.js"></script>
-    <script defer src="javascript/handle_select_options.js"></script>
-    <script defer src="javascript/buttons_click.js"></script>
-    <title>Save slot</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"
+        href="css/zones - Copy.css">
+  <script defer
+          src="javascript/load_map.js"></script>
+  <script defer
+          src="javascript/send_form_search.js"></script>
+  <script defer
+          src="javascript/handle_select_options.js"></script>
+  <script defer
+          src="javascript/buttons_click.js"></script>
+  <title>Save slot</title>
 </head>
 
 <body>
-    <main>
-        <div class="left-right-wrapper">
-            <div class="left">
+  <main>
+    <div class="left-right-wrapper">
+      <div class="left">
 
-                <!-- Slideshow -->
-                <div class="slideshow-container">
+        <!-- Slideshow -->
+        <div class="slideshow-container">
 
-                    <!-- First slide -->
-                    <div class="mySlides fade" id="FMI">
-                        <button class="space" id="A0" disabled>A<br>0</button>
-                        <button class="space" id="A1" disabled>A<br>1</button>
-                        <button class="space" id="A2" disabled>A<br>2</button>
-                        <button class="space" id="A3" disabled>A<br>3</button>
-                        <button class="space" id="A4" disabled>A<br>4</button>
-                        <button class="space" id="A5" disabled>A<br>5</button>
-                        <button class="space" id="A6" disabled>A<br>6</button>
-                        <button class="space" id="A7" disabled>A<br>7</button>
-                        <button class="space" id="A8" disabled>A<br>8</button>
-                        <button class="space" id="A9" disabled>A<br>9</button>
-                    </div>
+          <!-- First slide -->
+          <div class="mySlides fade"
+               id="FMI">
+            <button class="space"
+                    id="A0"
+                    disabled>A<br>0</button>
+            <button class="space"
+                    id="A1"
+                    disabled>A<br>1</button>
+            <button class="space"
+                    id="A2"
+                    disabled>A<br>2</button>
+            <button class="space"
+                    id="A3"
+                    disabled>A<br>3</button>
+            <button class="space"
+                    id="A4"
+                    disabled>A<br>4</button>
+            <button class="space"
+                    id="A5"
+                    disabled>A<br>5</button>
+            <button class="space"
+                    id="A6"
+                    disabled>A<br>6</button>
+            <button class="space"
+                    id="A7"
+                    disabled>A<br>7</button>
+            <button class="space"
+                    id="A8"
+                    disabled>A<br>8</button>
+            <button class="space"
+                    id="A9"
+                    disabled>A<br>9</button>
+          </div>
 
-                    <!-- Second slide -->
-                    <div class="mySlides fade" id="FZF">
-                        <button class="space" id="B0" disabled>B<br>0</button>
-                        <button class="space" id="B1" disabled>B<br>1</button>
-                        <button class="space" id="B2" disabled>B<br>2</button>
-                        <button class="space" id="B3" disabled>B<br>3</button>
-                        <button class="space" id="B4" disabled>B<br>4</button>
-                        <button class="space" id="B5" disabled>B<br>5</button>
-                        <button class="space" id="B6" disabled>B<br>6</button>
-                        <button class="space" id="B7" disabled>B<br>7</button>
-                        <button class="space" id="B8" disabled>B<br>8</button>
-                        <button class="space" id="B9" disabled>B<br>9</button>
-                        <button class="space" id="B10" disabled>B<br>10</button>
-                        <button class="space" id="B11" disabled>B<br>11</button>
-                        <button class="space" id="B12" disabled>B<br>12</button>
-                        <button class="space" id="B13" disabled>B<br>13</button>
-                        <button class="space" id="B14" disabled>B<br>14</button>
-                        <button class="space" id="B15" disabled>B<br>15</button>
-                    </div>
+          <!-- Second slide -->
+          <div class="mySlides fade"
+               id="FZF">
+            <button class="space"
+                    id="B0"
+                    disabled>B<br>0</button>
+            <button class="space"
+                    id="B1"
+                    disabled>B<br>1</button>
+            <button class="space"
+                    id="B2"
+                    disabled>B<br>2</button>
+            <button class="space"
+                    id="B3"
+                    disabled>B<br>3</button>
+            <button class="space"
+                    id="B4"
+                    disabled>B<br>4</button>
+            <button class="space"
+                    id="B5"
+                    disabled>B<br>5</button>
+            <button class="space"
+                    id="B6"
+                    disabled>B<br>6</button>
+            <button class="space"
+                    id="B7"
+                    disabled>B<br>7</button>
+            <button class="space"
+                    id="B8"
+                    disabled>B<br>8</button>
+            <button class="space"
+                    id="B9"
+                    disabled>B<br>9</button>
+            <button class="space"
+                    id="B10"
+                    disabled>B<br>10</button>
+            <button class="space"
+                    id="B11"
+                    disabled>B<br>11</button>
+            <button class="space"
+                    id="B12"
+                    disabled>B<br>12</button>
+            <button class="space"
+                    id="B13"
+                    disabled>B<br>13</button>
+            <button class="space"
+                    id="B14"
+                    disabled>B<br>14</button>
+            <button class="space"
+                    id="B15"
+                    disabled>B<br>15</button>
+          </div>
 
-                    <!-- Third slide -->
-                    <div class="mySlides fade" id="FHF">
-                        <button class="space" id="C0" disabled>C<br>0</button>
-                        <button class="space" id="C1" disabled>C<br>1</button>
-                        <button class="space" id="C2" disabled>C<br>2</button>
-                        <button class="space" id="C3" disabled>C<br>3</button>
-                        <button class="space" id="C4" disabled>C<br>4</button>
-                        <button class="space" id="C5" disabled>C<br>5</button>
-                        <button class="space" id="C6" disabled>C<br>6</button>
-                        <button class="space" id="C7" disabled>C<br>7</button>
-                        <button class="space" id="C8" disabled>C<br>8</button>
-                        <button class="space" id="C9" disabled>C<br>9</button>
-                        <button class="space" id="C10" disabled>C<br>10</button>
-                        <button class="space" id="C11" disabled>C<br>11</button>
-                        <button class="space" id="C12" disabled>C<br>12</button>
-                        <button class="space" id="C13" disabled>C<br>13</button>
-                        <button class="space" id="C14" disabled>C<br>14</button>
-                        <button class="space" id="C15" disabled>C<br>15</button>
-                        <button class="space" id="C16" disabled>C<br>16</button>
-                        <button class="space" id="C17" disabled>C<br>17</button>
-                    </div>
+          <!-- Third slide -->
+          <div class="mySlides fade"
+               id="FHF">
+            <button class="space"
+                    id="C0"
+                    disabled>C<br>0</button>
+            <button class="space"
+                    id="C1"
+                    disabled>C<br>1</button>
+            <button class="space"
+                    id="C2"
+                    disabled>C<br>2</button>
+            <button class="space"
+                    id="C3"
+                    disabled>C<br>3</button>
+            <button class="space"
+                    id="C4"
+                    disabled>C<br>4</button>
+            <button class="space"
+                    id="C5"
+                    disabled>C<br>5</button>
+            <button class="space"
+                    id="C6"
+                    disabled>C<br>6</button>
+            <button class="space"
+                    id="C7"
+                    disabled>C<br>7</button>
+            <button class="space"
+                    id="C8"
+                    disabled>C<br>8</button>
+            <button class="space"
+                    id="C9"
+                    disabled>C<br>9</button>
+            <button class="space"
+                    id="C10"
+                    disabled>C<br>10</button>
+            <button class="space"
+                    id="C11"
+                    disabled>C<br>11</button>
+            <button class="space"
+                    id="C12"
+                    disabled>C<br>12</button>
+            <button class="space"
+                    id="C13"
+                    disabled>C<br>13</button>
+            <button class="space"
+                    id="C14"
+                    disabled>C<br>14</button>
+            <button class="space"
+                    id="C15"
+                    disabled>C<br>15</button>
+            <button class="space"
+                    id="C16"
+                    disabled>C<br>16</button>
+            <button class="space"
+                    id="C17"
+                    disabled>C<br>17</button>
+          </div>
 
-                    <!-- Pointers for next and previous slide -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
+          <!-- Pointers for next and previous slide -->
+          <a class="prev"
+             onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next"
+             onclick="plusSlides(1)">&#10095;</a>
+        </div>
+      </div>
+
+      <div class="right">
+        <h2 class="text">Изберете зона</h2>
+
+        <!-- Zone buttons -->
+        <div class="btn-container">
+          <img src="./images/buttonA.png"
+               alt="btnA"
+               class="btn"
+               onclick="currentSlide(1)"></img>
+          <img src="./images/buttonB.png"
+               alt="btnB"
+               class="btn"
+               onclick="currentSlide(2)"></img>
+          <img src="./images/buttonC.png"
+               alt="btnC"
+               class="btn"
+               onclick="currentSlide(3)"></img>
+        </div>
+
+        <!-- Form for querying available places in a specific time period -->
+        <form id="search-form">
+
+          <!-- Form header -->
+          <header id="form-header">
+            <h2 class="text">Изберете времеви интервал</h2>
+          </header>
+
+          <!-- The form itself -->
+          <section id="form-inputs">
+
+            <!-- Date for the query -->
+            <div class="form-item">
+              <label for="date"
+                     class="text">Дата:</label>
+              <input type="date"
+                     name="date"
+                     id="date">
             </div>
 
-            <div class="right">
-                <h2 class="text">Изберете зона</h2>
+            <div class="interval-wrapper">
+              <!-- The beggining of the time interval -->
+              <div class="form-item">
+                <label for="start-time"
+                       class="text">От:</label>
 
-                <!-- Zone buttons -->
-                <div class="btn-container">
-                    <img src="./images/buttonA.png" alt="btnA" class="btn" onclick="currentSlide(1)"></img>
-                    <img src="./images/buttonB.png" alt="btnB" class="btn" onclick="currentSlide(2)"></img>
-                    <img src="./images/buttonC.png" alt="btnC" class="btn" onclick="currentSlide(3)"></img>
-                </div>
+                <!-- Its options are created dynamically -->
+                <select name="start-time"
+                        id="start-time">
+                </select>
+              </div>
 
-                <!-- Form for querying available places in a specific time period -->
-                <form id="search-form">
+              <!-- The end of the time interval -->
+              <div class="form-item">
+                <label for="end-time"
+                       class="text">До:</label>
 
-                    <!-- Form header -->
-                    <header id="form-header">
-                        <h2 class="text">Изберете времеви интервал</h2>
-                    </header>
+                <!-- Its options are created dynamically -->
+                <select name="end-time"
+                        id="end-time">
+                </select>
+              </div>
+            </div>
 
-                    <!-- The form itself -->
-                    <section id="form-inputs">
+            <!-- button "Търси" for submitting the form -->
 
-                        <!-- Date for the query -->
-                        <div class="form-item">
-                            <label for="date" class="text">Дата:</label>
-                            <input type="date" name="date" id="date">
-                        </div>
+            <!-- !! Да се смени с бутон -->
 
-                        <div class="interval-wrapper">
-                            <!-- The beggining of the time interval -->
-                            <div class="form-item">
-                                <label for="start-time" class="text">От:</label>
+            <img src="images/search.png"
+                 class="search-btn"
+                 id="to-search">
 
-                                <!-- Its options are created dynamically -->
-                                <select name="start-time" id="start-time">
-                                </select>
-                            </div>
+            <!-- !! Това какво е -->
 
-                            <!-- The end of the time interval -->
-                            <div class="form-item">
-                                <label for="end-time" class="text">До:</label>
-
-                                <!-- Its options are created dynamically -->
-                                <select name="end-time" id="end-time">
-                                </select>
-                            </div>
-                        </div>
-
-                        <!-- button "Търси" for submitting the form -->
-
-                        <!-- !! Да се смени с бутон -->
-
-                        <img src="images/search.png" class="search-btn" id="to-search">
-
-                        <!-- !! Това какво е -->
-
-                        <!-- <div id="search-params">
+            <!-- <div id="search-params">
                     <h2 class="text">Избран времеви интервал</h2>
                     <p>Дата: <span id="date-value">22.06.2021</span>; Интервал: <span id="start-time-value">7</span>&ndash;<span id="end-time-value">8</span></p>
                 </div> -->
-                    </section>
+          </section>
 
-                    <!-- Response from the backend -->
-                    <div id="response">
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <!-- Response from the backend -->
-        <div id="reservation-response">
-        </div>
-
-        <!-- Container of the buttons for each of the slots for the given zone (will be added dynamically by JS) -->
-    </main>
-
-    <!-- Confirmation box for when the user clicks on an available slot -->
-    <div id="confirm-message-container" class="non-visible">
-        <section id="message">
-            <p id="confirm-message">Сигурни ли сте, че искате да резервирате <span id="selected-button"></span>?</p>
-        </section>
-
-        <ul id="button-list">
-            <li id="yes-button">
-                <span>ДА</span>
-            </li>
-            <li id="no-button">
-                <span>НЕ</span>
-            </li>
-        </ul>
+          <!-- Response from the backend -->
+          <div id="response">
+          </div>
+        </form>
+      </div>
     </div>
 
-    <!-- Dimmer that is used when the confirmation box is displayed (it makes sure that only the confirmation box's options can be pressed and dims everything but the confirmation box)-->
-    <div class="dimmer non-visible">
+    <!-- Response from the backend -->
+    <div id="reservation-response">
     </div>
-    <!-- "Назад" button -->
-    <aside>
-        <!-- !! Да се смени с бутон -->
-        <img src="images/back.png" class="search-btn" id="back-btn">
-    </aside>
 
-    <!-- !! Да се махне като се оправи оцветяването на бутоните  -->
-    <script>
+    <!-- Container of the buttons for each of the slots for the given zone (will be added dynamically by JS) -->
+  </main>
+
+  <!-- Confirmation box for when the user clicks on an available slot -->
+  <div id="confirm-message-container"
+       class="non-visible">
+    <section id="message">
+      <p id="confirm-message">Сигурни ли сте, че искате да резервирате <span id="selected-button"></span>?</p>
+    </section>
+
+    <ul id="button-list">
+      <li id="yes-button">
+        <span>ДА</span>
+      </li>
+      <li id="no-button">
+        <span>НЕ</span>
+      </li>
+    </ul>
+  </div>
+
+  <!-- Dimmer that is used when the confirmation box is displayed (it makes sure that only the confirmation box's options can be pressed and dims everything but the confirmation box)-->
+  <div class="dimmer non-visible">
+  </div>
+  <!-- "Назад" button -->
+  <aside>
+    <img src="images/back.png"
+         class="search-btn"
+         id="back-btn">
+  </aside>
+
+  <!-- !! Да се махне като се оправи оцветяването на бутоните  -->
+  <script>
         // let buttons = document.querySelectorAll(".space");
 
         // // Set an event handler on the document so that when
@@ -200,7 +320,7 @@
         //         evt.target.classList.add("active");
         //     }
         // });
-    </script>
+  </script>
 </body>
 
 </html>
