--- a/FMI_Parking_System/frontend/account/account_view.html
+++ b/FMI_Parking_System/frontend/account/account_view.html
@@ -3,28 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible"
-        content="IE=edge" />
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet"
-        href="css/account_view_styles.css">
-  <script defer
-          src="javascript/load_user_data.js"></script>
-  <script defer
-          src="javascript/load_today_schedule.js"></script>
-  <script defer
-          src="javascript/navbar_buttons.js"></script>
-  <script defer
-          src="javascript/map_click_reaction.js"></script>
-  <script defer
-          src="javascript/submit_csv_file.js"></script>
-  <script defer
-          src="javascript/get_schedule.js"></script>
-  <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"
-          defer></script>
-  <script defer
-          src="javascript/generate-qr.js"></script>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/account_view_styles.css">
+  <script defer src="javascript/load_user_data.js"></script>
+  <script defer src="javascript/load_today_schedule.js"></script>
+  <script defer src="javascript/navbar_buttons.js"></script>
+  <!-- <script defer src="javascript/map_click_reaction.js"></script> -->
+  <script defer src="javascript/submit_csv_file.js"></script>
+  <script defer src="javascript/get_schedule.js"></script>
+  <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js" defer></script>
+  <script defer src="javascript/generate-qr.js"></script>
   <script>
     /* reload the page on load because the page won't load the user's data when he has set cookies */
     window.onload = function () {
@@ -46,48 +35,41 @@
 
         <!--  logo -->
         <div class="non-option">
-          <img src="images/Logo.png"
-               alt="Parking system logo">
+          <img src="images/Logo.png" alt="Parking system logo">
         </div>
 
         <!-- Navbar options -->
-        <div class="option"
-             id="my-account">
+        <div class="option" id="my-account">
           <span>
             <h3>Моят профил</h3>
           </span>
         </div>
 
-        <div class="option"
-             id="my-schedule">
+        <div class="option" id="my-schedule">
           <span>
             <h3>Моят график</h3>
           </span>
         </div>
 
-        <div class="option"
-             id="my-qrcode">
+        <div class="option" id="my-qrcode">
           <span>
             <h3>QR код</h3>
           </span>
         </div>
 
-        <div class="option"
-             id="parking-zones">
+        <div class="option" id="parking-zones">
           <span>
             <h3>Паркинг зони</h3>
           </span>
         </div>
 
-        <div class="option"
-             id="reserve-spot">
+        <div class="option" id="reserve-spot">
           <span>
             <h3>Запази паркомясто</h3>
           </span>
         </div>
 
-        <div class="option"
-             id="log-out">
+        <div class="option" id="log-out">
           <span>
             <h3>Изход</h3>
           </span>
@@ -107,8 +89,7 @@
           <div class="user-info">
             <!-- User picture -->
             <div id="user-picture">
-              <img src="images/Profil_photo.png"
-                   alt="user-picture">
+              <img src="images/Profil_photo.png" alt="user-picture">
             </div>
 
             <!-- User data -->
@@ -132,31 +113,24 @@
       </section>
 
       <!-- Upload schedule tab -->
-      <section id="my-schedule-section"
-               class="no-display">
+      <section id="my-schedule-section" class="no-display">
 
         <!-- The three buttons over at the top of the tab -->
         <section class="button-section-wrapper">
           <section id="button-section">
-            <button class="button-style"
-                    id="first-button">Качване на график</button>
-            <button class="button-style active"
-                    id="second-button">График</button>
-            <button class="button-style"
-                    id="third-button">Запазени паркоместа</button>
+            <button class="button-style" id="first-button">Качване на график</button>
+            <button class="button-style active" id="second-button">График</button>
+            <button class="button-style" id="third-button">Запазени паркоместа</button>
           </section>
         </section>
 
         <section class="schedule-data-section">
           <!-- The section for the "Качване на график" button -->
-          <section id="upload-file-section"
-                   class="no-display">
+          <section id="upload-file-section" class="no-display">
             <form id="upload-file-form">
               <label for="csv">Качете CSV файл:</label>
-              <input type="file"
-                     id="csv">
-              <button class="button-style"
-                      id="upload-file">Запази файл</button>
+              <input type="file" id="csv">
+              <button class="button-style" id="upload-file">Запази файл</button>
             </form>
 
             <!-- Used for the response from the server -->
@@ -175,8 +149,7 @@
           </section>
 
           <!-- The section for the "Запазени паркоместа" button -->
-          <section id="slots-section"
-                   class="no-display">
+          <section id="slots-section" class="no-display">
             <header>
               <h4>Резервирани паркоместа</h4>
             </header>
@@ -190,30 +163,33 @@
       </section>
 
       <!-- QR code section -->
-      <section id="my-qrcode-section"
-               class="no-display">
-        <button id="display-qr-btn"
-                onclick="displayQR()"
-                class="button-style "> Покажи QR код</button>
-        <button id="hide-qr-btn"
-                onclick="hideQR() "
-                class="button-style no-display"> Скрий QR код</button>
-        <div id="qrcode"
-             class="no-display"></div>
-        <div id="expired-qr-msg"
-             class="no-display">Вашият QR е изтекъл. Натиснете долния бутон, за да се
+      <section id="my-qrcode-section" class="no-display">
+        <button id="display-qr-btn" onclick="displayQR()" class="button-style "> Покажи QR код</button>
+        <button id="hide-qr-btn" onclick="hideQR() " class="button-style no-display"> Скрий QR код</button>
+        <div id="qrcode" class="no-display"></div>
+        <div id="expired-qr-msg" class="no-display">Вашият QR е изтекъл. Натиснете долния бутон, за да се
           генерира нов QR код.</div>
-        <button id="new-qr-btn"
-                onclick="get_new_qr()"
-                class="button-style no-display">Генерирай нов QR
+        <button id="new-qr-btn" onclick="get_new_qr()" class="button-style no-display">Генерирай нов QR
           код</button>
       </section>
 
       <!-- Map of all parking zones -->
-      <section id="parking-zones-section"
-               class="no-display">
-        <img src="images/map.png"
-             alt="map showing all the zones">
+      <section id="parking-zones-section" class="no-display">
+        <header id="my-account-header">
+          <h1>Карта на всички паркинг зони</h1>
+        </header>
+        <article id="map-details">
+          <img src="images/map.png" alt="map showing all the zones">
+          <section id="map-info">
+            <p>Картата представялва общ изглед на всички паркоместа около:</p>
+            <ul>
+              <li>Факултет по матемаика и инфроматика (Зона А)</li>
+              <li>Физически факултет (Зона В)</li>
+              <li>Факултет по химия и фармация (Зона С)</li>
+            </ul>
+            <p>За да запазите паркомясто преминете към <a href="../map/zones - Copy.html">"Запази паркомясто"</a>.</p>
+          </section>
+        </article>
       </section>
     </section>
   </main>
